--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ plugins:
 
 twitter_username: jekyllrb
 github_username:  lexma1412
-github: [metadata]
+# github: [metadata]
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
