--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ title: [Ducal Blog]
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
   [My site is a place to summarize technical topic that I interested]
-baseurl: "/blog" # the subpath of your site, e.g. /blog
-url: "https://lexma1412.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
+#baseurl: "/blog" # the subpath of your site, e.g. /blog
+#url: "https://lexma1412.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 # Build settings
 #theme: minima
 remote_theme: pages-themes/dinky@v0.2.0
